Fix hosted app menu button anchor point misalignment

This CL fixes the misalignment of the hosted app menu button
anchor point by updating its view bounds.

Overriding CalculatePreferredSize() didn't update the behaviour
of GetHeightForWidth() which caused it to be cropped by the
container's BoxLayout. LabelButton::SetMinSize() exists and
should be used instead.

Before rects:
https://bugs.chromium.org/p/chromium/issues/attachment?aid=335982&signed_aid=hz80AUGwixvyOI7d2jCIYQ==&inline=1

After rects:
https://bugs.chromium.org/p/chromium/issues/attachment?aid=335983&signed_aid=9NLhUbDPYjh_YRMnsVABAw==&inline=1

Bug: 836099
Change-Id: I77ad668816df936bbb3129aa1253330382fe22c5
Reviewed-on: https://chromium-review.googlesource.com/1025592
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553290}
Former-commit-id: ed2ae4a3e2943d902359c976b7fa1e94921a4238